--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -57,10 +57,13 @@
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
         android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize"
-        android:exported="true">
+        android:exported="true"
+        android:name=".FirebaseNotificationService"
+        android:exported="false">
 
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
+            <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
@@ -69,4 +72,6 @@
      android:name="com.google.android.geo.API_KEY"
      android:value="AIzaSyAwnmhXdO_cKW1sfWtQ7T_djHGvQV4XOc0"/>
     </application>
+
+   
 </manifest>
