--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -163,6 +163,7 @@ dependencies {
     implementation ('com.google.android.gms:play-services-safetynet:18.0.1')
     implementation("com.google.android.gms:play-services-auth:20.6.0")
     implementation 'com.facebook.android:facebook-android-sdk:11.2.1'
+    implementation project(':react-native-fs')
     
 
     implementation(project(':react-native-maps')){
