--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.8.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-firebase/app": "^18.2.0",
     "@react-native-firebase/auth": "^18.2.0",
@@ -21,10 +22,12 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "axios": "^1.4.0",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-fbsdk-next": "^11.2.1",
     "react-native-flash-message": "^0.4.1",
+    "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-google-places-autocomplete": "^2.5.1",
@@ -35,7 +38,8 @@
     "react-native-rename": "^3.2.13",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
-    "react-native-snap-carousel": "^3.9.1"
+    "react-native-snap-carousel": "^3.9.1",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
