--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
 apply plugin: 'com.google.gms.google-services' 
 apply plugin: 'com.google.firebase.crashlytics'
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 import com.android.build.OutputFile
 
@@ -164,6 +165,7 @@ dependencies {
     implementation("com.google.android.gms:play-services-auth:20.6.0")
     implementation 'com.facebook.android:facebook-android-sdk:11.2.1'
     implementation project(':react-native-fs')
+    implementation project(':react-native-vector-icons')
     
 
     implementation(project(':react-native-maps')){
