--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-maps": "^1.7.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-otp-inputs": "^7.4.0",
+    "react-native-paper": "^5.10.6",
     "react-native-push-notification": "^8.1.1",
     "react-native-rename": "^3.2.13",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^9.0.0",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
