--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/stack": "^6.3.18",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^1.4.0",
+    "cache": "^3.0.0",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-fbsdk-next": "^11.2.1",
