--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -164,6 +164,7 @@ dependencies {
     implementation ('com.google.android.gms:play-services-safetynet:18.0.1')
     implementation("com.google.android.gms:play-services-auth:20.6.0")
     implementation 'com.facebook.android:facebook-android-sdk:11.2.1'
+    implementation 'androidx.browser:browser:1.3.0'
     implementation project(':react-native-fs')
     implementation project(':react-native-vector-icons')
     
